--- a/flask/uwsgi.ini
+++ b/flask/uwsgi.ini
@@ -5,7 +5,7 @@ socket = :8080             # 指定socket文件，也可以指定为127.0.0.1:90
 processes = 4              # 指定开启的工作进程数量（这里是开启4个进程）
 threads = 2                # 设置每个工作进程的线程数
 master = true              # 启动主进程，来管理其他进程，其它的uwsgi进程都是这个master进程的子进程
-chmod-socket = 660         # unix socket是个文件，所以会受到unix系统的权限限制。如果我们的uwsgi客户端没有权限访问uWSGI socket，可以用这个选项设置unix socket的权限
+;chmod-socket = 777         # unix socket是个文件，所以会受到unix系统的权限限制。如果我们的uwsgi客户端没有权限访问uWSGI socket，可以用这个选项设置unix socket的权限
 vacuum = true              # 当服务器退出的时候自动删除unix socket文件和pid文件
 die-on-term = true         # ？
 buffer-size = 65535        # 设置用于uwsgi包解析的内部缓存区大小为128k。默认是4k
